fixed issues in rec system